k8s/cache/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop-cache
  labels:
    app.kubernetes.io/part-of: shop
    tier: cache
